updated footer logo

--- a/pages/galerie-foto.html
+++ b/pages/galerie-foto.html
@@ -234,7 +234,7 @@
   <footer>
     <div class="pensiuni-turistice">
         <a href="https://www.pensiunituristice.com/cluj-napoca.html">
-            <img class="logo-pensiuni-turistice" src="https://www.pensiunituristice.com/pensiunituristice.png" alt="Logo pensiuni turistice">
+            <img class="logo-pensiuni-turistice" src="../images/cabane-si-pensiuni.png" alt="Logo pensiuni turistice">
             <p>Cazare si inchirieri Cluj</p>
         </a>
     </div>
